--- a/css/browser.css
+++ b/css/browser.css
@@ -42,6 +42,36 @@
   float:left;
 }
 
+.suggestions {
+  top: 0;
+  position: absolute;
+  width: 100%;
+  height: auto;
+  background-color: #fff;
+  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    transition: all 0.3s;
+}
+
+.suggestions-ul {
+  font-size: 16px;
+  padding-left: 0;
+}
+
+.suggestions-ul > li {
+  padding-top: 10px;
+  padding-bottom: 8px;
+  padding-left: 64px;
+  transition: all 0.3s;
+}
+
+.suggestions-ul > li:hover {
+  transition: all 0.3s;
+}
+
+.selected {
+  background-color: #BDBDBD;
+}
+
 .backBtnIcon {
   width: calc(100% - 10px);
   height: calc(100% - 10px);
