--- a/css/history.css
+++ b/css/history.css
@@ -27,6 +27,8 @@ body {
   padding-bottom: 8px;
   margin-left: auto;
   margin-right: auto;
+  overflow:hidden;
+  padding-right: 32px;
 }
 .card p {
   font-size: 14px;
