--- a/css/browser.css
+++ b/css/browser.css
@@ -11,7 +11,7 @@
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     background-color: white;
     height: 32px;
-    width: calc(100% - 186px);
+    width: calc(100% - 222px);
     margin-left: 16px;
     -webkit-transition: background-color 0.2s;
     float: left;
@@ -131,11 +131,11 @@
 }
 
 .menuBtn {
-    opacity: 0.6;
-    height: 32px;
-    width: 32px;
-    margin-right: 8px;
-    float: right;
+  opacity: 0.6;
+  height: 32px;
+  width: 32px;
+  margin-left: 8px;
+  float: left;
 }
 
 .menuBtnIcon {
@@ -148,4 +148,21 @@
 
 .menuBtn:hover {
     opacity: 1;
+}
+
+
+.exBtn {
+  opacity: 0.6;
+  height: 32px;
+  width: 32px;
+  margin-right: 8px;
+  float: right;
+}
+
+.exBtnIcon {
+  width: calc(100% - 10px);
+  height: calc(100% - 10px);
+  margin: 5px;
+  background-image: url('../img/more-vert.png');
+  background-size: cover;
 }
