--- a/css/menu.css
+++ b/css/menu.css
@@ -6,7 +6,7 @@
     cursor: default;
     margin-left: 16px;
     opacity: 0;
-    position:relative;
+    position: relative;
     visibility: hidden;
 }
 
@@ -48,81 +48,71 @@
     -webkit-transition: all 0.2s;
 }
 
-
-.extBtnIcon {
-  width: calc(100% - 10px);
-  height: calc(100% - 10px);
-  margin: 5px;
-  background-image: url('../img/more-vert.png');
-  background-size: cover;
-}
-
 .ext-menu {
-  height: 194px;
-  width: 154px;
-  position: absolute;
-  top: 32px;
-  right: 16px;
-  background-color: #fff;
-  border-radius: 2px;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  visibility: hidden;
-  opacity: 0;
-  overflow: hidden;
-  padding: 0;
+    height: 194px;
+    width: 154px;
+    position: absolute;
+    top: 32px;
+    right: 16px;
+    background-color: #fff;
+    border-radius: 2px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    visibility: hidden;
+    opacity: 0;
+    overflow: hidden;
+    padding: 0;
 }
 
 .ext-indicator {
-  position: relative;
-  height: 8px;
-  width: 8px;
-  margin-left: 4px;
-  margin-top: 10px;
-  background-color: #444;
-  border-radius: 100%;
-  opacity: 0.5;
-  float: left;
-  transition: all 0.2s;
-  cursor: default;
+    position: relative;
+    height: 8px;
+    width: 8px;
+    margin-left: 4px;
+    margin-top: 10px;
+    background-color: #444;
+    border-radius: 100%;
+    opacity: 0.5;
+    float: left;
+    transition: all 0.2s;
+    cursor: default;
 }
 
 .ext-indicator:hover {
-  opacity: 0.7;
-  transition: all 0.2s;
-  cursor: pointer;
+    opacity: 0.7;
+    transition: all 0.2s;
+    cursor: pointer;
 }
 
 .ext-indicators {
-  list-style-type: none;
-  position: absolute;
-  bottom: -8px;
-  padding: 0;
-  width: auto;
+    list-style-type: none;
+    position: absolute;
+    bottom: -8px;
+    padding: 0;
+    width: auto;
 }
 
 .ext-item {
-  position: relative;
-  float:left;
-  margin-left: 0px;
-  height: 48px;
-  width: 48px;
-  list-style-type: none;
+    position: relative;
+    float: left;
+    margin-left: 0px;
+    height: 48px;
+    width: 48px;
+    list-style-type: none;
 }
 
 .ext-item-icon {
-  width: calc(100% - 12px);
-  height: calc(100% - 12px);
-  margin: 6px;
-  background-size: cover;
+    width: calc(100% - 12px);
+    height: calc(100% - 12px);
+    margin: 6px;
+    background-size: cover;
 }
 
-
 .ext-page {
-  margin-top: 6px;
-  position: relative;
-  top: 0;
-  padding: 0;
-  padding-left: 6px;
-  padding-top: 0;
-  display: inline-block;
+    margin-top: 6px;
+    position: relative;
+    top: 0;
+    padding: 0;
+    padding-left: 6px;
+    padding-top: 0;
+    display: inline-block;
 }
