--- a/css/controls/materialdesign.css
+++ b/css/controls/materialdesign.css
@@ -1,56 +1,35 @@
-html, body {
-    height: 100%;
-    font-size: 20px;
-    margin: 0 !important;
-    padding: 0 !important;
-    color: #444;
-    font-family: 'Roboto', sans-serif;
-    background-color: #fafafa;
-    color: #444;;
-}
-
-.c {
-    width: 100%;
-    margin-top: 32px;
-    margin-left:32px;
-}
-
 .mdc-switch {
-  width: 40px;
-  min-height: 14px;
+    width: 40px;
+    min-height: 14px;
 }
-
 .s-container {
-  position: relative;
+    position: relative;
 }
-
 .mdc-switch .lever {
-  width: 40px;
-  height: 18px;
-  border-radius: 20px;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: #818181;
+    width: 40px;
+    height: 18px;
+    border-radius: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #818181;
 }
-
 .mdc-switch .ellipse-ripple {
-  height: 48px;
-  width: 48px;
-  position: absolute;
-  top:-15px;
-  left:-17.5px;
-  background-color: #818181;
-  opacity: 0; /*0.2;*/
-  border-radius: 100%;
+    height: 48px;
+    width: 48px;
+    position: absolute;
+    top: -15px;
+    left: -17.5px;
+    background-color: #818181;
+    opacity: 0;
+    border-radius: 100%;
 }
-
 .mdc-switch .ellipse {
-  height: 22px;
-  width: 22px;
-  position: absolute;
-  top:-2px;
-  left:-4px;
-  background-color: #F1F1F1;
-  border-radius: 100%;
-  box-shadow: 0 1px 3px 1px rgba(0,0,0,0.4);
+    height: 22px;
+    width: 22px;
+    position: absolute;
+    top: -2px;
+    left: -4px;
+    background-color: #F1F1F1;
+    border-radius: 100%;
+    box-shadow: 0 1px 3px 1px rgba(0,0,0,0.4);
 }
