--- a/css/browser.css
+++ b/css/browser.css
@@ -2,6 +2,7 @@
     background-color: #F5F5F5;
     width: 100%;
     height: 40px;
+    z-index: 888;
     padding-top: 8px;
     -webkit-transition: background-color 0.2s;
 }
