--- a/css/menu.css
+++ b/css/menu.css
@@ -6,18 +6,21 @@
     cursor: default;
     margin-left: 16px;
     opacity: 0;
-    position: relative;
+    position: absolute;
     visibility: hidden;
+    border-radius: 3px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
 .menu-items {
     position: relative;
     padding-top: 0px;
     padding-left: 0px;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
     left: 0;
+    margin: 0;
     margin-left: 0;
     list-style-type: none;
+    border-radius: 3px;
 }
 
 .menu-item {
@@ -43,7 +46,7 @@
     width: 22px;
     float: left;
     margin-top: -4px;
-    margin-right: 12px;
+    margin-right: 24px;
     background-size: cover;
     -webkit-transition: all 0.2s;
 }
