--- a/css/browser.css
+++ b/css/browser.css
@@ -40,7 +40,7 @@
     top: 0;
     position: absolute;
     width: 100%;
-    height: 185px;
+    height: auto;
     background-color: #fff;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
     transition: all 0.3s;
@@ -52,11 +52,14 @@
     padding-left: 0;
     overflow: hidden;
     position: relative;
-    bottom: 16px;
     height: inherit;
 }
 
 .suggestions-ul> li {
+          max-width: 80%;
+    white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     padding-top: 10px;
     padding-bottom: 8px;
     padding-left: 64px;
