--- a/css/controls/materialdesign.css
+++ b/css/controls/materialdesign.css
@@ -24,6 +24,16 @@
     border-radius: 100%;
 }
 
+.ellipse-ripple2 {
+    background-color: #818181;
+    border-radius: 100%;
+    position: absolute;
+    left: -15px;
+    top: -15px;
+    height: 48px;
+    width: 48px;
+}
+
 .ellipse {
     height: 22px;
     width: 22px;
@@ -33,4 +43,51 @@
     background-color: #F1F1F1;
     border-radius: 100%;
     box-shadow: 0 1px 3px 1px rgba(0,0,0,0.4);
+}
+
+.check-container {
+    height:18px;
+    width: 18px;
+    position: relative;
+    overflow: hidden;
+}
+.border {
+    width: calc(100% - 4px);
+    height: calc(100% - 4px);
+    border-radius: 4px;
+    border: 2px solid #757575;
+}
+.md-checkbox {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+.fill {
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+    position: absolute;
+    background-color: #3F51B5;
+}
+.fill2 {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    border-radius: 4px;
+    background-color: #3F51B5;
+}
+.check {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+}
+.check-icon {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    background-size: 16px 16px;
+    background-repeat: no-repeat;
+    background-position:center;
+
+    background-image: url('../../img/check.png');
 }
