--- a/css/browser.css
+++ b/css/browser.css
@@ -41,6 +41,7 @@
     position: absolute;
     width: 100%;
     height: auto;
+    max-height: 245px;
     background-color: #fff;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
     transition: all 0.3s;
