--- a/css/history.css
+++ b/css/history.css
@@ -7,6 +7,7 @@ body {
 }
 
 .toolbar {
+
     position: fixed;
     width: 100%;
     z-index: 999;
@@ -16,7 +17,8 @@ body {
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
-.toolbar> h3 {
+.toolbar .default-toolbar > h3 {
+    font-family: 'Roboto-Light', sans-serif;
     color: #fff;
     margin-top: (50% - auto);
 }
