added some design tweaks

--- a/css/tabbar.css
+++ b/css/tabbar.css
@@ -11,7 +11,7 @@
 }
 
 .titlebar {
-    background-color: #EEEEEE;
+    background-color: #eee;
     height: 30px;
     width: 100%;
     -webkit-app-region: drag
