--- a/css/browser.css
+++ b/css/browser.css
@@ -1,14 +1,15 @@
 .bar {
-    background-color: #F5F5F5;
+    background-color: #fff;
     width: 100%;
     height: 40px;
     z-index: 888;
-    padding-top: 8px;
+    padding-top: 6px;
     -webkit-transition: background-color 0.2s;
 }
 
 .searchBox {
     border-radius: 3px;
+    margin-top: 2px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     background-color: white;
     height: 32px;
@@ -56,10 +57,10 @@
 }
 
 .suggestions-ul> li {
-          max-width: 100%;
+  max-width: 100%;
     white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
+    overflow: hidden;
+    text-overflow: ellipsis;
     padding-top: 10px;
     padding-bottom: 8px;
     padding-left: 64px;
@@ -158,7 +159,7 @@
     opacity: 0.6;
     height: 38px;
     width: 38px;
-    margin-top: -2px;
+    margin-top: 0px;
     margin-left: 2px;
     float: right;
 }
@@ -167,6 +168,6 @@
   width: calc(100% - 16px);
   height: calc(100% - 16px);
   margin: 8px;
-    background-image: url('../img/more-vert.png');
-    background-size: cover;
+background-image: url('../img/more-vert.png');
+background-size: cover;
 }
