--- a/css/ripple.css
+++ b/css/ripple.css
@@ -3,10 +3,17 @@
     position: relative;
     box-sizing: border-box;
     transform: translate3d(0, 0, 0);
+    
+    user-select: none;
+}
+.ripple-icon {
+
+    transform: translate3d(0, 0, 0);
     user-select: none;
 }
 
 .ripple-effect {
+    z-index: -2;
     position: absolute;
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.5);
