--- a/css/history.css
+++ b/css/history.css
@@ -95,3 +95,17 @@ a {
     border-radius: 2px;
     background-color: rgba(255, 255, 255, 0.3);
 }
+.flat-button {
+    -webkit-user-select: none;
+    border-radius: 4px;
+    padding-left: 24px; 
+    padding-right: 24px; 
+    padding-top: 12px; 
+    padding-bottom: 10px;
+    cursor: default;
+}
+.icon-button-content {
+    background-size: cover;
+    width: 20px;
+    height: 20px;
+}
