--- a/css/browser.css
+++ b/css/browser.css
@@ -2,19 +2,23 @@
     background-color: #fff;
     width: 100%;
     height: 40px;
-    z-index: 888;
+    z-index: 1;
     padding-top: 6px;
     -webkit-transition: background-color 0.2s;
+    box-shadow: 0 1px 0px rgba(0,0,0,0.1);
+     position: absolute;
+     top: 0;
 }
 .tabWindow {
     background-color: #fff;
+    height: 100%;
 }
 
 .searchBox {
     border-radius: 3px;
     margin-top: 2px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    background-color: white;
+    background-color: #fff;
     height: 32px;
     width: calc(100% - 245px);
     margin-left: 16px;
@@ -44,8 +48,10 @@
     top: 0;
     position: absolute;
     width: 100%;
+    margin-top: 46px;
     height: auto;
     max-height: 245px;
+    z-index: 999;
     background-color: #fff;
     box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
     overflow: hidden;
@@ -64,8 +70,8 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    padding-top: 10px;
-    padding-bottom: 8px;
+    padding-top: 6px;
+    padding-bottom: 4px;
     padding-left: 64px;
     padding-right: 64px;
 }
