--- a/css/newtab.css
+++ b/css/newtab.css
@@ -13,6 +13,17 @@
     src: url(../fonts/Roboto-Light.ttf);
 }
 
+.noselectable {
+    -webkit-user-select: none;       
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+}
+
 html, body {
   height: 100%;
   font-size: 16px;
@@ -102,7 +113,7 @@ html, body {
     transition: all 0.2s;
 }
 
-.md-input-animate-divider {
+.md-input-animate-divider { 
     width: 100% !important;
 }
 
@@ -115,43 +126,33 @@ html, body {
     padding: 0;
     position: relative;
 }
-.bookmark {
-    float:left;
-    margin-right: 16px;
-    margin-bottom: 16px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    border-radius: 2px;
-}
+
 .bookmarks li {
     width: 196px;
     height: 128px;
-    background-color: white;
     position: relative;
-
+    float:left;
+    margin-right: 16px;
+    margin-bottom: 16px;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    border-radius: 2px;
 }
 
-.bookmarks li .topbar {
-    width: 100%;
-    height: 32px;
-    background-color: #eee;
+.bookmarks li .icon {
+    width: 24px;
+    height: 24px;
     position: absolute;
-
-}
-
-.bookmarks li .topbar img {
-    width: 25px;
-    height: 25px;
     left: 6px;
-    position: absolute;
+    right: 0;
     top: 50%;
     transform: translateY(-50%);
 }
 
-.bookmarks li .topbar .pagetitle {
-    color: #444;
+.bookmarks li .title {
     position: absolute;
+    left: 44px;
+    right: 0;
     top: 50%;
-    left: 36px;
+    color: #ffffff;
     transform: translateY(-50%);
-    font-size: 16px;
 }
